# Convex-Hull

./: CMakeLists.txt  Convex_Hull.h  README.txt  Test.cpp  main.cpp
GUI4ConvexHall/: ConvexHull_GUI.java  hull.txt  test.txt  text.txt
Graham/: CMakeLists.txt  Compare.cpp  Convex_Hull.cpp  Graham.cpp  Graham.h  Pop.cpp  Push_Pop.cpp  Sort.cpp  Test.cpp
Helpers/: CMakeLists.txt  Helper.cpp  Helper.h  getPoints.cpp  output.cpp
Jarvis/: CMakeLists.txt  Compare.cpp  Create_Line2.cpp  Create_line.cpp  Future1.h  Future2.h  Jarvis.cpp  Jarvis.h  Jarvis_March.cpp  Orientation.cpp  RunJarvis.cpp  Test.cpp  TestingFunctions.cpp
Point/: CMakeLists.txt  Create_Slope.cpp  Create_Y_Intercept.cpp  GetMostPoint.cpp  Getters.cpp  Hypotenuse.cpp  Line.cpp  Line.h  Point.cpp  Point.h  Point2.cpp  Sin.cpp  Test.cpp  main.cpp  setOriginCircle.cpp  setQuadrant.cpp
Quick/: CMakeLists.txt  Quick.cpp  Quick_Full.cpp  Quick_Hull.cpp  Quick_Hull.h  Quick_Single.cpp  Quick_Single_Full.cpp  Test.cpp  mutexClass.h
Triangle/: CMakeLists.txt  Circumference.cpp  Create_Centroid.cpp  GetHeight.cpp  Helpers.cpp  LawOfCosineAngle.cpp  LawOfSine.cpp  Test.cpp  Triangle.cpp  Triangle.h  isInside.cpp
